--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "wordy-words": "0.0.18"
   },
   "devDependencies": {
+    "defence-cli": "^2.0.0",
+    "replace-require-self": "^1.1.1",
     "standard": "^7.1.2"
   },
   "files": [
@@ -16,6 +18,7 @@
   "license": "Apache-2.0",
   "repository": "commonform/commonform-wordy",
   "scripts": {
-    "lint": "standard"
+    "lint": "standard",
+    "test": "defence -i javascript README.md | replace-require-self | node"
   }
 }
